--- a/docusaurus/src/scss/custom-search-bar.scss
+++ b/docusaurus/src/scss/custom-search-bar.scss
@@ -9,10 +9,7 @@
   border-radius: 4px;
   background-color: white;
   position: relative;
-  top: 60px;
-  left: 23px;
-  margin-top: 20px;
-  margin-bottom: 20px;
+  margin-bottom: 12px;
   max-width: 232px;
   box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.04);
   font-family: var(--strapi-font-family-body) !important; 
